--- a/nginx.conf
+++ b/nginx.conf
@@ -1,77 +1,123 @@
-# user www-data;
-# worker_processes auto;
-# pid /run/nginx.pid;
-# include /etc/nginx/modules-enabled/*.conf;
-# events {
-#         worker_connections 768;
-#         # multi_accept on;
-# }
-http {
-    server {
-        location / {
-            root /data/www;
-        }
+events {
 
-        location /images/ {
-            root /data;
-        }
-    }
-        # ##
-        # # Basic Settings
-        # ##
-        # sendfile on;
-        # tcp_nopush on;
-        # tcp_nodelay on;
-        # keepalive_timeout 65;
-        # types_hash_max_size 2048;
-        # # server_tokens off;
-        # # server_names_hash_bucket_size 64;
-        # # server_name_in_redirect off;
-        # include /etc/nginx/mime.types;
-        # default_type application/octet-stream;
-        # ##
-        # # SSL Settings
-        # ##
-        # ssl_protocols TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-        # ssl_prefer_server_ciphers on;
-        # ##
-        # # Logging Settings
-        # ##
-        # access_log /var/log/nginx/access.log;
-        # error_log /var/log/nginx/error.log;
-        # ##
-        # # Gzip Settings
-        # ##
-        # gzip on;
-        # # gzip_vary on;
-        # # gzip_proxied any;
-        # # gzip_comp_level 6;
-        # # gzip_buffers 16 8k;
-        # # gzip_http_version 1.1;
-        # # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-        # ##
-        # # Virtual Host Configs
-        # ##
-        # include /etc/nginx/conf.d/*.conf;
-        # include /etc/nginx/sites-enabled/*;
 }
-#mail {
-#       # See sample authentication script at:
-#       # http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#       # auth_http localhost/auth.php;
-#       # pop3_capabilities "TOP" "USER";
-#       # imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#       server {
-#               listen     localhost:110;
-#               protocol   pop3;
-#               proxy      on;
-#       }
-# 
-#       server {
-#               listen     localhost:143;
-#               protocol   imap;
-#               proxy      on;
-#       }
-#}
+
+http {
+  error_log /etc/nginx/error_log.log warn;
+  client_max_body_size 20m;
+  
+  proxy_cache_path /etc/nginx/cache keys_zone=one:500m max_size=1000m;
+
+  server {
+    server_name server1.your.domain;
+
+    location /your_app_1 {
+      proxy_pass http://your_app_1:80;
+      rewrite ^/your_app_1(.*)$ $1 break;
+    }
+
+    location /your_app_2 {
+      proxy_pass http://your_app_2:80;
+      rewrite ^/your_app_2(.*)$ $1 break;
+    }
+  }
+  
+  server {
+    server_name server2.your.domain;
+    proxy_cache one;
+    proxy_cache_key $request_method$request_uri;
+    proxy_cache_min_uses 1;
+    proxy_cache_methods GET;
+    proxy_cache_valid 200 1y;
+	
+    location / {
+      proxy_pass http://your_app_3:80;
+      rewrite ^/your_app_3(.*)$ $1 break;
+    }
+
+    listen 80;
+    listen 443 ssl;
+    ssl_certificate /etc/letsencrypt/live/server2.your.domain/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/server2.your.domain/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+  }
+}
+
+
+# # user www-data;
+# # worker_processes auto;
+# # pid /run/nginx.pid;
+# # include /etc/nginx/modules-enabled/*.conf;
+# # events {
+# #         worker_connections 768;
+# #         # multi_accept on;
+# # }
+# http {
+#     server {
+#         location / {
+#             root /data/www;
+#         }
+
+#         location /images/ {
+#             root /data;
+#         }
+#     }
+#         # ##
+#         # # Basic Settings
+#         # ##
+#         # sendfile on;
+#         # tcp_nopush on;
+#         # tcp_nodelay on;
+#         # keepalive_timeout 65;
+#         # types_hash_max_size 2048;
+#         # # server_tokens off;
+#         # # server_names_hash_bucket_size 64;
+#         # # server_name_in_redirect off;
+#         # include /etc/nginx/mime.types;
+#         # default_type application/octet-stream;
+#         # ##
+#         # # SSL Settings
+#         # ##
+#         # ssl_protocols TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+#         # ssl_prefer_server_ciphers on;
+#         # ##
+#         # # Logging Settings
+#         # ##
+#         # access_log /var/log/nginx/access.log;
+#         # error_log /var/log/nginx/error.log;
+#         # ##
+#         # # Gzip Settings
+#         # ##
+#         # gzip on;
+#         # # gzip_vary on;
+#         # # gzip_proxied any;
+#         # # gzip_comp_level 6;
+#         # # gzip_buffers 16 8k;
+#         # # gzip_http_version 1.1;
+#         # # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+#         # ##
+#         # # Virtual Host Configs
+#         # ##
+#         # include /etc/nginx/conf.d/*.conf;
+#         # include /etc/nginx/sites-enabled/*;
+# }
+# #mail {
+# #       # See sample authentication script at:
+# #       # http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
+# # 
+# #       # auth_http localhost/auth.php;
+# #       # pop3_capabilities "TOP" "USER";
+# #       # imap_capabilities "IMAP4rev1" "UIDPLUS";
+# # 
+# #       server {
+# #               listen     localhost:110;
+# #               protocol   pop3;
+# #               proxy      on;
+# #       }
+# # 
+# #       server {
+# #               listen     localhost:143;
+# #               protocol   imap;
+# #               proxy      on;
+# #       }
+# #}
