--- a/production-demo.yml
+++ b/production-demo.yml
@@ -30,19 +30,13 @@ services:
     env_file:
       - ./.envs/.production/.postgres
 
-  traefik:
-    build:
-      context: .
-      dockerfile: ./compose/production/traefik/Dockerfile
-    image: osler_production_traefik
+  nginx: 
+    image: nginx:latest
+    ports:
+      - "8000:80"
     depends_on:
       - django
-    volumes:
-      - production_traefik:/etc/traefik/acme
-    ports:
-      - "0.0.0.0:8084:80"
-      - "0.0.0.0:443:443"
-
+  
   redis:
     image: redis:5.0
 
