config for dockerized postgres1

--- a/production-demo.yml
+++ b/production-demo.yml
@@ -3,7 +3,6 @@ version: '3'
 volumes:
   production_postgres_data: {}
   production_postgres_data_backups: {}
-  production_traefik: {}
 
 services:
   django:
@@ -17,6 +16,7 @@ services:
     env_file:
       - ./.envs/.production/.django
       - ./.envs/.production/.postgres
+      - ./.envs/.production/.demo
     command: /start
 
   postgres:
